[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ategpt"
version = "1.0.0"
authors = [
    { name="David Mays", email="maysidavid@gmail.com" },
]
description = "ATE-GPT ('Ask, Think, Evaluate', powered by GPT) is a lightweight module for guiding a GPT-based LLM through a comprehensive thought process on any subject."
readme = "README.md"
requires-python = ">=3.7.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dimays/ategpt"
"Bug Tracker" = "https://github.com/dimays/ategpt/issues"

[project.packages]
include = ["src"]

[options]
packages = find: